--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,120 +1,26 @@
-@charset "UTF-8";
-
-/* Aquí definimos las Custom properties */
-:root {
-  --negro: #393939;
-  /* Tipografía */
-  --tipo-principal: Helvetica, Arial, sans-serif;
-  --tipo-secundaria: Verdana;
+.carousel-caption{
+    background-color: #e3f2fd8a;
 }
 
-/* Las adaptamos al modo oscuro */
-@media (prefers-color-scheme: dark) {
-  :root {
-    --negro: #ececec;
-  }
-}
-
-/* Reseteamos los margin y paddings de todas las etiquetas */
-* {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  vertical-align: baseline;
-}
-
-/* Evitamos problemas con las imagenes */
-img, picture, video, iframe, figure {
-  max-width: 100%;
-  width: 100%;
-  display: block;
-}
-
-/* Reseteamos los enlaces para funcionar como cajas... */
-a {
-  display: block;
-  text-decoration: none;
-  color: inherit;
-  font-size: inherit;
-}
-
-/* ... excepto los que se encuentran en párrafos */
-p a {
-  display: inline;
-}
-
-/* Quitamos los puntos de los <li> */
-li {
-  list-style-type: none;
-}
-
-/* Configuramos anclas suaves */
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
+  }
+
+.nav-registro {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+    font-size: inherit;
 }
 
-/* Desactivamos estilos por defecto de las principales etiquetas de texto */
-h1, h2, h3, h4, h5, h6, p, span, a, strong, blockquote, i, b, u, em {
-  font-size: 1em;
-  font-weight: inherit;
-  font-style: inherit;
-  text-decoration: none;
-  color: inherit;
+.row .col-8 .p{
+    display: flex;
+    align-items: center;
 }
 
-/* Evitamos problemas con los pseudoelementos de quotes */
-blockquote:before, blockquote:after, q:before, q:after {
-  content: "";
-  content: none;
+li {
+    list-style-type: none;
 }
-
-/* Configuramos el texto que seleccionamos */
-::-moz-selection {
-  background-color: var(--negro);
-  color: var(--blanco);
-}
-::selection {
-  background-color: var(--negro);
-  color: var(--blanco);
-}
-
-/* Nivelamos problemas de tipografías y colocación de formularios */
-form, input, textarea, select, button, label {
-  font-family: inherit;
-  font-size: inherit;
-  -webkit-hyphens: auto;
-      -ms-hyphens: auto;
-          hyphens: auto;
-  background-color: transparent;
-  color: inherit;
-  display: block;
-}
-
-/* Reseteamos las tablas */
-table, tr, td {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* Evitamos problemas con los SVG */
-svg {
-  width: 100%;
-  display: block;
-  fill: currentColor;
-}
-
-/* Configuramos la tipografía para toda la web */
-body {
-  min-height: 100vh;
-  font-size: 100%;
-  font-family: var(--tipo-principal);
-  color: var(--negro);
-  line-height: 1.4em;
-}
-
-/*Código nuevo*/
 
 .header{
     width: 100%;
@@ -137,8 +43,9 @@ body {
 }
 
 .header .li:hover{
-    background:rgba(109, 109, 109, 0.432);
+    background: #e3f2fd;
     font-size: 1.05em;
+    border-radius: 0.5em;
 }
 
 .titulo{
@@ -150,6 +57,7 @@ body {
   font-size: 2em;
   color: black;
   line-height: 1em;
+  padding: 1em;
 }
 
 body{
@@ -196,7 +104,7 @@ body{
   transition-duration: 0.4s;
 }
 
-.contenedor__boton:hover{
+.btn-info:hover, .btn-warning:hover, .btn-danger:hover{
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
@@ -212,10 +120,9 @@ body{
   font-weight: bold;
 }
 
-.contenedor__select, option{
-  background-color: rgb(51, 51, 51);
-  color: white;
-  padding: 7px;
+.contenedor__select:hover{
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  transition-duration: 0.4s;
 }
 
 .citas{
